@@ -105,7 +105,7 @@ void gerb_stats_add_aperture(gerb_aperture_list_t *aperture_list_in,
 			     double parameter[5]);
 void gerb_stats_add_to_D_list(gerb_aperture_list_t *D_list_in,
 			      int number);
-void gerb_stats_increment_D_list_count(gerb_aperture_list_t *D_list_in,
+int gerb_stats_increment_D_list_count(gerb_aperture_list_t *D_list_in,
 				       int number, 
 				       int count,
 				       error_list_t *error); 
